// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`payableCreatedTemplate > matches snapshot 1`] = `"Your payable 0xabcdef...567890 is live"`;

exports[`payableCreatedTemplate > matches snapshot 2`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Chainbills</title>
</head>
<body style="margin:0;padding:0;background:#f5f5f5;font-family:Arial,Helvetica,sans-serif;">
<table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f5f5f5;padding:32px 0;">
  <tr>
    <td align="center">
      <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff;border-radius:8px;overflow:hidden;max-width:600px;">
        <!-- Header -->
        <tr>
          <td style="background:#1a1a2e;padding:24px 32px;">
            <span style="color:#e8d5b7;font-size:22px;font-weight:700;letter-spacing:0.5px;">Chainbills</span>
          </td>
        </tr>
        <!-- Content -->
        <tr>
          <td style="padding:32px;">
            
    <h2 style="margin:0 0 16px;color:#1a1a2e;font-size:20px;">Your payable is live</h2>
    <p style="margin:0 0 8px;color:#333;font-size:15px;line-height:1.6;">
      Your Chainbills payable has been created and is ready to accept payments.
    </p>
    <p style="margin:0;color:#555;font-size:14px;">Payable ID: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xabcdef...567890</code></p>
    <a href="https://chainbills.xyz/payable/0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890" style="display:inline-block;margin-top:24px;padding:12px 24px;background:#1a1a2e;color:#e8d5b7;text-decoration:none;border-radius:6px;font-weight:600;font-size:15px;">View Payable</a>
          </td>
        </tr>
        <!-- Footer -->
        <tr>
          <td style="background:#f9f9f9;padding:20px 32px;border-top:1px solid #e8e8e8;">
            <p style="margin:0 0 8px;color:#888;font-size:12px;">
              You are receiving this email because of activity on your Chainbills account.
            </p>
            <p style="margin:0;color:#888;font-size:12px;">To stop receiving this type of notification, <a href="https://api.chainbills.xyz/email/unsubscribe?u=user1&amp;t=PAYABLE_CREATED&amp;s=sig" style="color:#888;">unsubscribe here</a>.</p>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`payableCreatedTemplate > matches snapshot 3`] = `
"Your Chainbills payable is live.

Payable ID: 0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890
View your payable: https://chainbills.xyz/payable/0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890

Unsubscribe: https://api.chainbills.xyz/email/unsubscribe?u=user1&t=PAYABLE_CREATED&s=sig"
`;

exports[`paymentReceiptTemplate > matches snapshot 1`] = `"Payment receipt: 2 USDC"`;

exports[`paymentReceiptTemplate > matches snapshot 2`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Chainbills</title>
</head>
<body style="margin:0;padding:0;background:#f5f5f5;font-family:Arial,Helvetica,sans-serif;">
<table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f5f5f5;padding:32px 0;">
  <tr>
    <td align="center">
      <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff;border-radius:8px;overflow:hidden;max-width:600px;">
        <!-- Header -->
        <tr>
          <td style="background:#1a1a2e;padding:24px 32px;">
            <span style="color:#e8d5b7;font-size:22px;font-weight:700;letter-spacing:0.5px;">Chainbills</span>
          </td>
        </tr>
        <!-- Content -->
        <tr>
          <td style="padding:32px;">
            
    <h2 style="margin:0 0 16px;color:#1a1a2e;font-size:20px;">Payment receipt</h2>
    <p style="margin:0 0 8px;color:#333;font-size:15px;line-height:1.6;">
      Your payment of <strong>2 USDC</strong> was successful.
    </p>
    <p style="margin:0 0 4px;color:#555;font-size:14px;">Payable: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xpay012</code></p>
    <p style="margin:0;color:#555;font-size:14px;">Payment ID: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xpmt789</code></p>
    <a href="https://chainbills.xyz/receipt/0xpmt789" style="display:inline-block;margin-top:24px;padding:12px 24px;background:#1a1a2e;color:#e8d5b7;text-decoration:none;border-radius:6px;font-weight:600;font-size:15px;">View Receipt</a>
          </td>
        </tr>
        <!-- Footer -->
        <tr>
          <td style="background:#f9f9f9;padding:20px 32px;border-top:1px solid #e8e8e8;">
            <p style="margin:0 0 8px;color:#888;font-size:12px;">
              You are receiving this email because of activity on your Chainbills account.
            </p>
            <p style="margin:0;color:#888;font-size:12px;">To stop receiving this type of notification, <a href="https://api.chainbills.xyz/email/unsubscribe?u=user1&amp;t=PAYMENT_RECEIPT&amp;s=sig" style="color:#888;">unsubscribe here</a>.</p>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`paymentReceiptTemplate > matches snapshot 3`] = `
"Payment receipt: 2 USDC

Payable: 0xpay012
Payment: 0xpmt789
View receipt: https://chainbills.xyz/receipt/0xpmt789

Unsubscribe: https://api.chainbills.xyz/email/unsubscribe?u=user1&t=PAYMENT_RECEIPT&s=sig"
`;

exports[`paymentReceivedTemplate > matches snapshot 1`] = `"You received 1.5 USDC"`;

exports[`paymentReceivedTemplate > matches snapshot 2`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Chainbills</title>
</head>
<body style="margin:0;padding:0;background:#f5f5f5;font-family:Arial,Helvetica,sans-serif;">
<table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f5f5f5;padding:32px 0;">
  <tr>
    <td align="center">
      <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff;border-radius:8px;overflow:hidden;max-width:600px;">
        <!-- Header -->
        <tr>
          <td style="background:#1a1a2e;padding:24px 32px;">
            <span style="color:#e8d5b7;font-size:22px;font-weight:700;letter-spacing:0.5px;">Chainbills</span>
          </td>
        </tr>
        <!-- Content -->
        <tr>
          <td style="padding:32px;">
            
    <h2 style="margin:0 0 16px;color:#1a1a2e;font-size:20px;">Payment received</h2>
    <p style="margin:0 0 8px;color:#333;font-size:15px;line-height:1.6;">
      Your payable received a payment of <strong>1.5 USDC</strong>.
    </p>
    <p style="margin:0 0 4px;color:#555;font-size:14px;">Payable: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xpay456</code></p>
    <p style="margin:0;color:#555;font-size:14px;">Payment: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xpmt123</code></p>
    <a href="https://chainbills.xyz/receipt/0xpmt123" style="display:inline-block;margin-top:24px;padding:12px 24px;background:#1a1a2e;color:#e8d5b7;text-decoration:none;border-radius:6px;font-weight:600;font-size:15px;">View Receipt</a>
          </td>
        </tr>
        <!-- Footer -->
        <tr>
          <td style="background:#f9f9f9;padding:20px 32px;border-top:1px solid #e8e8e8;">
            <p style="margin:0 0 8px;color:#888;font-size:12px;">
              You are receiving this email because of activity on your Chainbills account.
            </p>
            <p style="margin:0;color:#888;font-size:12px;">To stop receiving this type of notification, <a href="https://api.chainbills.xyz/email/unsubscribe?u=user1&amp;t=PAYMENT_RECEIVED&amp;s=sig" style="color:#888;">unsubscribe here</a>.</p>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`paymentReceivedTemplate > matches snapshot 3`] = `
"Payment received: 1.5 USDC

Payable: 0xpay456
Payment: 0xpmt123
View receipt: https://chainbills.xyz/receipt/0xpmt123

Unsubscribe: https://api.chainbills.xyz/email/unsubscribe?u=user1&t=PAYMENT_RECEIVED&s=sig"
`;

exports[`verificationCodeTemplate > matches snapshot 1`] = `"Your Chainbills email verification code"`;

exports[`verificationCodeTemplate > matches snapshot 2`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Chainbills</title>
</head>
<body style="margin:0;padding:0;background:#f5f5f5;font-family:Arial,Helvetica,sans-serif;">
<table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f5f5f5;padding:32px 0;">
  <tr>
    <td align="center">
      <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff;border-radius:8px;overflow:hidden;max-width:600px;">
        <!-- Header -->
        <tr>
          <td style="background:#1a1a2e;padding:24px 32px;">
            <span style="color:#e8d5b7;font-size:22px;font-weight:700;letter-spacing:0.5px;">Chainbills</span>
          </td>
        </tr>
        <!-- Content -->
        <tr>
          <td style="padding:32px;">
            
    <h2 style="margin:0 0 16px;color:#1a1a2e;font-size:20px;">Verify your email address</h2>
    <p style="margin:0 0 16px;color:#333;font-size:15px;line-height:1.6;">
      Use the code below to verify your email address on Chainbills. The code expires in 10 minutes.
    </p>
    <div style="margin:24px 0;padding:20px;background:#f0f4ff;border-radius:8px;text-align:center;">
      <span style="font-size:36px;font-weight:700;letter-spacing:8px;color:#1a1a2e;">042891</span>
    </div>
    <p style="margin:0;color:#888;font-size:13px;line-height:1.5;">
      If you did not request this code, you can safely ignore this email. Never share this code with anyone.
    </p>
          </td>
        </tr>
        <!-- Footer -->
        <tr>
          <td style="background:#f9f9f9;padding:20px 32px;border-top:1px solid #e8e8e8;">
            <p style="margin:0 0 8px;color:#888;font-size:12px;">
              You are receiving this email because of activity on your Chainbills account.
            </p>
            
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`verificationCodeTemplate > matches snapshot 3`] = `
"Verify your email address on Chainbills

Your verification code: 042891

The code expires in 10 minutes.

If you did not request this code, you can safely ignore this email."
`;

exports[`withdrawalCompletedTemplate > matches snapshot 1`] = `"Withdrawal of 5 USDC completed"`;

exports[`withdrawalCompletedTemplate > matches snapshot 2`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Chainbills</title>
</head>
<body style="margin:0;padding:0;background:#f5f5f5;font-family:Arial,Helvetica,sans-serif;">
<table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f5f5f5;padding:32px 0;">
  <tr>
    <td align="center">
      <table width="600" cellpadding="0" cellspacing="0" border="0" style="background:#ffffff;border-radius:8px;overflow:hidden;max-width:600px;">
        <!-- Header -->
        <tr>
          <td style="background:#1a1a2e;padding:24px 32px;">
            <span style="color:#e8d5b7;font-size:22px;font-weight:700;letter-spacing:0.5px;">Chainbills</span>
          </td>
        </tr>
        <!-- Content -->
        <tr>
          <td style="padding:32px;">
            
    <h2 style="margin:0 0 16px;color:#1a1a2e;font-size:20px;">Withdrawal completed</h2>
    <p style="margin:0 0 8px;color:#333;font-size:15px;line-height:1.6;">
      Your withdrawal of <strong>5 USDC</strong> has been completed.
    </p>
    <p style="margin:0 0 4px;color:#555;font-size:14px;">Payable: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xpay678</code></p>
    <p style="margin:0;color:#555;font-size:14px;">Withdrawal: <code style="background:#f4f4f4;padding:2px 6px;border-radius:4px;">0xwdr345</code></p>
    <a href="https://chainbills.xyz/payable/0xpay678" style="display:inline-block;margin-top:24px;padding:12px 24px;background:#1a1a2e;color:#e8d5b7;text-decoration:none;border-radius:6px;font-weight:600;font-size:15px;">View Payable</a>
          </td>
        </tr>
        <!-- Footer -->
        <tr>
          <td style="background:#f9f9f9;padding:20px 32px;border-top:1px solid #e8e8e8;">
            <p style="margin:0 0 8px;color:#888;font-size:12px;">
              You are receiving this email because of activity on your Chainbills account.
            </p>
            <p style="margin:0;color:#888;font-size:12px;">To stop receiving this type of notification, <a href="https://api.chainbills.xyz/email/unsubscribe?u=user1&amp;t=WITHDRAWAL_COMPLETED&amp;s=sig" style="color:#888;">unsubscribe here</a>.</p>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>
</body>
</html>"
`;

exports[`withdrawalCompletedTemplate > matches snapshot 3`] = `
"Withdrawal completed: 5 USDC

Payable: 0xpay678
Withdrawal: 0xwdr345
View payable: https://chainbills.xyz/payable/0xpay678

Unsubscribe: https://api.chainbills.xyz/email/unsubscribe?u=user1&t=WITHDRAWAL_COMPLETED&s=sig"
`;
